# clips-contract

./: .gitignore  CONFLICT_RESOLUTION.md  CONTRIBUTING.md  Cargo.toml  GAS_BENCHMARKS.md  Makefile  OPENSEA_METADATA.md  README.md  STANDARDS_COMPLIANCE.md  TODO.md  deploy-testnet.sh  deploy.sh  fix_lib.py
clips_nft/: Cargo.toml
clips_nft/src/: lib.rs
clips_nft/test_snapshots/: test_approval_and_approval_for_all_flow.1.json  test_batch_mint_enforces_gas_safe_limit.1.json  test_error_cases.1.json  test_integration_wallet_simulation_mint_and_royalty.1.json  test_mint_after_metadata_upload.1.json  test_name_and_symbol_configurable_by_admin.1.json  test_royalty_on_secondary_sale.1.json
clips_nft/test_snapshots/tests/: test_automatic_royalty_enforcement_on_transfer_custom_asset.1.json  test_automatic_royalty_enforcement_on_transfer_xlm.1.json  test_burn.1.json  test_burn_emits_event.1.json  test_claim_after_timelock_with_no_fees_returns_error.1.json  test_claim_before_timelock_returns_error.1.json  test_claim_without_request_returns_error.1.json  test_clip_token_id_lookup.1.json  test_double_mint_prevention.1.json  test_double_mint_same_clip_id_panics.1.json  test_mint_and_burn_cycle.1.json  test_mint_emits_event.1.json  test_mint_fails_with_wrong_clip_id_in_payload.1.json  test_mint_fails_with_wrong_owner_in_payload.1.json  test_mint_fails_with_wrong_signature.1.json  test_mint_soulbound_token.1.json  test_mint_stores_owner_and_uri.1.json  test_pause_blocks_mint.1.json  (+30 more)
clips_nft/tests/: backend_simulation.rs  integration.rs  test_helpers.rs  test_metadata_fields.rs
(+3 files in other folders)
